<resources>
    <string name="app_name">Tasks</string>
    <string name="default_list">My tasks</string>
    <string name="new_list">+ New list</string>

    <string name="back">Back</string>
    <string name="create_new_list">Create new list</string>
    <string name="done">Done</string>
    <string name="add_note">Add note</string>
    <string name="choose_list">Add note</string>
    <string name="options">Options</string>

    <string name="enter_list_title">Enter list title</string>
    <string name="new_task">New task</string>
    <string name="save">Save</string>

    <string name="add_description">Add description</string>
    <string name="add_datetime">Add date/time</string>
    <string name="make_favorite">Make favorite</string>

    <string name="rename_list">Rename list</string>
    <string name="delete_list">Delete list</string>
    <string name="delete_completed_tasks">Delete all completed tasks</string>
    <string name="mark_completed">Mark completed</string>
    <string name="mark_uncompleted">Mark uncompleted</string>
</resources>