<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    tools:context=".presentation.ui.NewNoteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/rounded_edittext"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/title_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/new_task"
            android:inputType="text"
            android:paddingStart="24dp"
            android:paddingTop="20dp"
            android:paddingEnd="24dp"
            android:paddingBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/description_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/description_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/add_description"
            android:inputType="text"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_input"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/add_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/ripple_effect"
                android:contentDescription="@string/add_description"
                android:padding="8dp"
                android:src="@drawable/baseline_edit_note_24"
                app:iconTint="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/add_datetime"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@drawable/ripple_effect"
                android:contentDescription="@string/add_datetime"
                android:padding="12dp"
                android:src="@drawable/baseline_calendar_month_24"
                app:iconTint="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add_description"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/make_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect"
                android:contentDescription="@string/make_favorite"
                android:padding="8dp"
                android:src="@drawable/baseline_star_border_blue_24"
                app:iconTint="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add_datetime"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect"
                android:enabled="false"
                android:text="@string/save"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>